--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
                 hintContainer.classList.remove('hidden');
                 hintText.textContent = '';
 
-                const prompt = `Dame una pista críptica y con temática de piratas para un código de cofre del tesoro. El código es ${CORRECT_CODE}. Por nada del mundo no reveles el número directamente ni me sugieras nada dame directamente las pistas sobre los dígitos o su significado. Hazlo corto y misterioso.`;
+                const prompt = "Actúa como un pirata antiguo y sabio. Genera una pista críptica, corta y con temática pirata para un código de un cofre del tesoro. El código es ${CORRECT_CODE}, pero **no lo reveles jamás** ni digas que es un código. No lo expliques ni digas “esta es la pista”. Solo escribe la pista en tono misterioso y poético, como si fuera parte de un mapa secreto o una leyenda olvidada. No uses introducciones, títulos ni explicaciones. Que suene como una advertencia o acertijo dejado por piratas ."
+;
                 
                 try {
                     const hint = await callGemini(prompt);
